商城业务-商品详情-异步编排优化

--- a/gulimall-product/src/main/resources/templates/index.html
+++ b/gulimall-product/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
         <img src="/static/index/img/top_find_logo.png" alt="">
         <div class="input_find">
             <input type="text" placeholder="卸妆水"/>
-            <span style="background: url('/static/index/img/img_12.png') 0 -1px;"></span>
+            <span style="background: url(/static/index/img/img_12.png) 0 -1px;"></span>
             <a href="/static/#"><img src="/static/index/img/img_09.png"/></a>
         </div>
     </div>
@@ -96,14 +96,19 @@
             </b>
             <ul>
                 <li>
-                    <a href="/static//登录页面\index.html">你好，请登录</a>
+                    <a th:if="${session.loginUser != null}">欢迎, [[${session.loginUser.nickname}]]</a>
+                    <a th:if="${session.loginUser == null}" href="http://auth.gulimall.com/login.html">你好，请登录</a>
                 </li>
                 <li>
-                    <a href="/static//注册页面\index.html" class="li_2">免费注册</a>
+                    <a th:if="${session.loginUser == null}" href="http://auth.gulimall.com/reg.html"
+                       class="li_2">免费注册</a>
+                </li>
+                <li>
+                    <a th:if="${session.loginUser != null}" href="http://auth.gulimall.com/loguot.html" class="li_2">立即退出</a>
                 </li>
                 <span>|</span>
                 <li>
-                    <a href="/static/#">我的订单</a>
+                    <a href="http://member.gulimall.com/memberOrder.html">我的订单</a>
                 </li>
 
 
@@ -114,14 +119,14 @@
     <div class="header_sous">
         <div class="header_form">
             <input id="searchText" type="text" placeholder=""/>
-            <span style="background: url('/static/index/img/img_12.png') 0 -1px;"></span>
+            <span style="background: url(/static/index/img/img_12.png) 0 -1px;"></span>
             <!--<button><i class="glyphicon"></i></button>-->
-            <a href="javascript:search()"><img src="/static/index/img/img_09.png"/></a>
+            <a href="javascript:search();"><img src="/static/index/img/img_09.png"/></a>
         </div>
         <div class="header_ico">
             <div class="header_gw">
                 <img src="/static/index/img/img_15.png"/>
-                <span><a href="/static//购物车\One_JDshop.html">我的购物车</a></span>
+                <span><a href="http://cart.gulimall.com/cart.html">我的购物车</a></span>
                 <span>0</span>
             </div>
             <div class="header_ko">
@@ -206,10 +211,7 @@
                         <a href="/static/#" class="header_main_left_a" th:attr="ctg-data=${category.catId}"><b
                                 th:text="${category.name}">家用电器</b></a>
                     </li>
-
-
                 </ul>
-
             </div>
             <div class="header_main_center">
                 <div class="swiper-container swiper1">
@@ -525,34 +527,8 @@
         <div class="swiper-container swiper_section_second_list_left">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <ul>
-                        <li>
-                            <img src="/static/index/img/section_second_list_img1.jpg" alt="">
-                            <p>花王 (Merries) 妙而舒 纸尿裤 大号 L54片 尿不湿（9-14千克） （日本官方直采） 花王 (Merries)
-                                妙而舒 纸尿裤 大号 L54片 尿不湿（9-14千</p>
-                            <span>¥83.9</span><s>¥99.9</s>
-                        </li>
-                        <li>
-                            <img src="/static/index/img/section_second_list_img2.jpg" alt="">
-                            <p>华为mate9 4GB+32GB版 月光银 移动联通电信4G手机 双卡</p>
-                            <span>¥17.90</span><s>¥29.90</s>
-                        </li>
-                        <li>
-                            <img src="/static/index/img/section_second_list_img3.jpg" alt="">
-                            <p>超能 植翠低泡洗衣液（鲜艳亮丽）2kg/袋装（新老包装随机</p>
-                            <span>¥20.70</span><s>¥44.90</s>
-                        </li>
-                        <li>
-                            <img src="/static/index/img/section_second_list_img4.jpg" alt="">
-                            <p>长城（GreatWall）红酒 特选5年橡木桶解百纳干红葡萄酒 整</p>
-                            <span>¥399.00</span><s>¥599.00</s>
-                        </li>
-                        <li>
-                            <img src="/static/index/img/section_second_list_img5.jpg" alt="">
-                            <p>惠普(HP)暗影精灵2代Pro 15.6英寸游戏笔记本电脑(i5-7300H</p>
-                            <span>¥5999.00</span><s>¥6499.00</s>
-                        </li>
-                    </ul>
+                    <!-- 动态拼装秒杀商品信息 -->
+                    <ul id="seckillSkuContent"></ul>
                 </div>
                 <div class="swiper-slide">
                     <ul>
@@ -617,6 +593,22 @@
     function search() {
         var keyword = $("#searchText").val()
         window.location.href = "http://search.gulimall.com/list.html?keyword=" + keyword;
+    }
+
+    $.get("http://seckill.gulimall.com/getCurrentSeckillSkus", function (res) {
+        if (res.data.length > 0) {
+            res.data.forEach(function (item) {
+                $("<li onclick='toDetail(" + item.skuId + ")'></li>").append($("<img style='width: 130px; height: 130px' src='" + item.skuInfo.skuDefaultImg + "' />"))
+                    .append($("<p>" + item.skuInfo.skuTitle + "</p>"))
+                    .append($("<span>" + item.seckillPrice + "</span>"))
+                    .append($("<s>" + item.skuInfo.price + "</s>"))
+                    .appendTo("#seckillSkuContent");
+            })
+        }
+    })
+
+    function toDetail(skuId) {
+        location.href = "http://item.gulimall.com/" + skuId + ".html";
     }
 
 </script>
