--- a/gulimall-search/src/main/resources/templates/list.html
+++ b/gulimall-search/src/main/resources/templates/list.html
@@ -1215,7 +1215,6 @@
                     </div>
                     <!--排序内容，每四个是一组-->
                     <div class="rig_tab">
-                        <!--/*@thymesVar id="getProducts" type="com.atguigu.gulimall.search.vo.SearchResult"*/-->
                         <div th:each="product : ${result.getProducts()}">
                             <div class="ico">
                                 <i class="iconfont icon-weiguanzhu"></i>
@@ -1223,13 +1222,12 @@
                             </div>
                             <p class="da">
                                 <a th:href="|http://item.gulimall.com/${product.skuId}.html|" >
-                                    <img   class="dim" th:src="${product.skuImg}">
+                                    <img  class="dim" th:src="${product.skuImg}">
                                 </a>
                             </p>
                             <ul class="tab_im">
                                 <li><a href="/static/search/#" title="黑色">
-                                    <!--/*@thymesVar id="product" type="com.atguigu.gulimall.search.vo.SearchResult"*/-->
-                                    <img th:src="${product.skuImg}"></a></li>
+                                    <img th:src="${product.skuImg}"  alt="产品黑色款式的图片"></a></li>
                             </ul>
                             <p class="tab_R">
                                 <span th:text="'￥' + ${product.skuPrice}">¥5199.00</span>
