商城业务-认证服务-页面效果

--- a/gulimall-product/src/main/resources/templates/item.html
+++ b/gulimall-product/src/main/resources/templates/item.html
@@ -61,7 +61,7 @@
                 <li style="border: 0;">
                     <a th:if="${session.loginUser == null}" href="http://auth.gulimall.com/login.html"
                        class="aa">你好，请登录</a>
-                    <a th:if="${session.loginUser != null}">欢迎, [[${session.loginUser.nickname}]]</a>
+                    <a th:if="${session.loginUser != null}">[[${session.loginUser.nickname}]]</a>
                 </li>
                 <li>
                     <a th:if="${session.loginUser == null}" href="http://auth.gulimall.com/reg.html"
