商城业务-购物车-删除购物项

--- a/gulimall-product/src/main/resources/templates/item.html
+++ b/gulimall-product/src/main/resources/templates/item.html
@@ -459,7 +459,8 @@
 
                     <div class="box-lh-one">
                         <ul>
-                            <li th:each="img : ${item.images}" th:if="${!#strings.isEmpty(img.imgUrl)}" ><img th:src="${img.imgUrl}"/></li>
+                            <li th:each="img : ${item.images}" th:if="${!#strings.isEmpty(img.imgUrl)}"><img
+                                    th:src="${img.imgUrl}"/></li>
                         </ul>
                     </div>
                     <div id="left">
@@ -747,15 +748,18 @@
                     <li>
                         <a href="/static/item/##"><img src="/static/item/img/5a0afeddNb34732af.jpg"/></a>
                         <p>
-                            <a href="/static/item/##">OPPO R11s Plus 双卡双待全面屏拍照手机香槟色 全网通(6G RAM+64G ROM)标配</a>
+                            <a href="/static/item/##">OPPO R11s Plus 双卡双待全面屏拍照手机香槟色 全网通(6G RAM+64G
+                                ROM)标配</a>
                         </p>
                         <p><strong class="J-p-20015341974">￥3699.00</strong></p>
                     </li>
                     <li>
                         <a href="/static/item/##"><img src="/static/item/img/5a12873eN41754123.jpg"/></a>
                         <p>
-                            <a target="_blank" title="詹姆士（GEMRY） R19plus全网通4G 智能手机 双卡双待 6+128GB 鳄鱼纹雅致版（新品预约）"
-                               href="/static/item/item.jd.com/20348283521.html">詹姆士（GEMRY） R19plus全网通4G 智能手机 双卡双待
+                            <a target="_blank"
+                               title="詹姆士（GEMRY） R19plus全网通4G 智能手机 双卡双待 6+128GB 鳄鱼纹雅致版（新品预约）"
+                               href="/static/item/item.jd.com/20348283521.html">詹姆士（GEMRY） R19plus全网通4G 智能手机
+                                双卡双待
                                 6+128GB 鳄鱼纹雅致版（新品预约）</a>
                         </p>
                         <p><strong class="J-p-20348283521">￥13999.00</strong></p>
@@ -763,7 +767,8 @@
                     <li>
                         <a href="/static/item/##"><img src="/static/item/img/59ec0131Nf239df75.jpg"/></a>
                         <p>
-                            <a target="_blank" title="斐纳（TOMEFON） 德国家用无线无绳手持立式充电吸尘器 静音大吸力吸尘器TF-X60"
+                            <a target="_blank"
+                               title="斐纳（TOMEFON） 德国家用无线无绳手持立式充电吸尘器 静音大吸力吸尘器TF-X60"
                                href="/static/item/item.jd.com/16683419775.html">斐纳（TOMEFON） 德国家用无线无绳手持立式充电吸尘器
                                 静音大吸力吸尘器TF-X60</a>
                         </p>
@@ -772,7 +777,8 @@
                     <li>
                         <a href="/static/item/##"><img src="/static/item/img/59015444N27317512.jpg"/></a>
                         <p>
-                            <a target="_blank" title="斐纳（TOMEFON） 扫地机器人德国智能导航规划全自动超薄扫地机器人吸尘器TF-D60 香槟金"
+                            <a target="_blank"
+                               title="斐纳（TOMEFON） 扫地机器人德国智能导航规划全自动超薄扫地机器人吸尘器TF-D60 香槟金"
                                href="/static/item/item.jd.com/12187770381.html">斐纳（TOMEFON）
                                 扫地机器人德国智能导航规划全自动超薄扫地机器人吸尘器TF-D60 香槟金</a>
                         </p>
@@ -789,8 +795,10 @@
                     <li>
                         <a href="/static/item/##"><img src="/static/item/img/59e55e01N369f98f2.jpg"/></a>
                         <p>
-                            <a target="_blank" title="华为（HUAWEI） 华为 Mate10 4G手机  双卡双待 亮黑色 全网通(6GB RAM+128GB ROM)"
-                               href="/static/item/item.jd.com/17931625443.html">华为（HUAWEI） 华为 Mate10 4G手机 双卡双待 亮黑色
+                            <a target="_blank"
+                               title="华为（HUAWEI） 华为 Mate10 4G手机  双卡双待 亮黑色 全网通(6GB RAM+128GB ROM)"
+                               href="/static/item/item.jd.com/17931625443.html">华为（HUAWEI） 华为 Mate10 4G手机 双卡双待
+                                亮黑色
                                 全网通(6GB RAM+128GB ROM)</a>
                         <p><strong class="J-p-17931625443">￥4766.00</strong></p>
                     </li>
@@ -798,7 +806,8 @@
                         <a href="/static/item/##"><img src="/static/item/img/584fcc3eNdb0ab94c.jpg"/></a>
                         <p>
                             <a target="_blank" title="华为 Mate 9 Pro 6GB+128GB版 琥珀金 移动联通电信4G手机 双卡双待"
-                               href="/static/item/item.jd.com/3749093.html">华为 Mate 9 Pro 6GB+128GB版 琥珀金 移动联通电信4G手机
+                               href="/static/item/item.jd.com/3749093.html">华为 Mate 9 Pro 6GB+128GB版 琥珀金
+                                移动联通电信4G手机
                                 双卡双待</a>
                         </p>
                         <p><strong class="J-p-3749093">￥4899.00</strong></p>
@@ -816,7 +825,8 @@
                     <li>
                         <a href="/static/item/##"><img src="/static/item/img/5a002ba3N126c2f73.jpg"/></a>
                         <p>
-                            <a target="_blank" title="斐纳（TOMEFON） 扫地机器人德国智能导航规划全自动超薄扫地机器人吸尘器TF-D60 香槟金"
+                            <a target="_blank"
+                               title="斐纳（TOMEFON） 扫地机器人德国智能导航规划全自动超薄扫地机器人吸尘器TF-D60 香槟金"
                                href="/static/item/item.jd.com/12187770381.html">斐纳（TOMEFON）
                                 扫地机器人德国智能导航规划全自动超薄扫地机器人吸尘器TF-D60 香槟金</a>
                         </p>
@@ -942,7 +952,7 @@
                             <!--                            </div>-->
                         </div>
                     </li>
-<!--                    <li class="baozhuang actives" id="li2">-->
+                    <!--                    <li class="baozhuang actives" id="li2">-->
                     <li class="baozhuang actives" id="li2">
                         <div class="guiGebox">
                             <div class="guiGe" th:each="group : ${item.groupAttrs}">
@@ -956,7 +966,8 @@
                             </div>
                             <div class="package-list">
                                 <h3>包装清单</h3>
-                                <p>手机（含内置电池） X 1、5A大电流华为SuperCharge充电器X 1、5A USB数据线 X 1、半入耳式线控耳机 X 1、快速指南X 1、三包凭证 X
+                                <p>手机（含内置电池） X 1、5A大电流华为SuperCharge充电器X 1、5A USB数据线 X 1、半入耳式线控耳机
+                                    X 1、快速指南X 1、三包凭证 X
                                     1、取卡针 X 1、保护壳 X 1</p>
                             </div>
                         </div>
@@ -1334,9 +1345,12 @@
 <script>
     $(".sku_attr_value").click(function () {
         // 1、点击的元素添加上自定义的属性
-        let skus = new Array();
-        let curr = $(this).attr("skus").split(",");
+        let skus = [];
+        console.log($(this).attr("skus"));
+        let curr = $(this).attr("skus").split(","); // 从当前元素的属性中获取SKU，并按逗号分隔
+        console.log(curr);
 
+        // 移除所有SKU属性值元素的选中状态，并为当前点击的元素添加选中状态
         $(this).parent().parent().find(".sku_attr_value").removeClass("checked");
         $(this).addClass("checked");
         changeCheckedStyle();
@@ -1344,13 +1358,20 @@
         $("a[class='sku_attr_value checked']").each(function () {
             skus.push($(this).attr("skus").split(","));
         });
+        console.log(skus);
 
         let filterEle = skus[0];
-        for (let i = 1; i < skus.length; i++) {
-            filterEle = $(filterEle).filter(skus[i])[0];
-        }
+        console.log(filterEle);
+        // for (let i = 1; i < skus.length; i++) {
+        //     filterEle = $(filterEle).filter(skus[i])[0];
+        //     console.log("for "+ i +": "+  filterEle);
+        // }
+        filterEle = $(filterEle).filter(skus[1])[0];
+
 
         location.href = "http://item.gulimall.com/" + filterEle + ".html";
+
+        console.log(filterEle);
 
         return false;
     });
