--- a/gulimall-cart/src/main/resources/templates/cartList.html
+++ b/gulimall-cart/src/main/resources/templates/cartList.html
@@ -25,7 +25,7 @@
             <ul class="header-right">
                 <li>
                     <a th:if="${session.loginUser == null}" href="http://auth.gulimall.com/login.html" class="li_2">你好，请登录</a>
-                    <a th:if="${session.loginUser != null}">欢迎, [[${session.loginUser.nickname}]]</a>
+                    <a th:if="${session.loginUser != null}">[[${session.loginUser.nickname}]]</a>
                 </li>
                 <li>
                     <a th:if="${session.loginUser == null}" href="http://auth.gulimall.com/reg.html"
