--- a/gulimall-cart/src/main/resources/templates/success.html
+++ b/gulimall-cart/src/main/resources/templates/success.html
@@ -28,7 +28,7 @@
             <li>
                 <a th:if="${session.loginUser == null}" href="http://auth.gulimall.com/login.html"
                    class="li_2">请登录</a>
-                <a th:if="${session.loginUser != null}">欢迎, [[${session.loginUser.nickname}]]</a>
+                <a th:if="${session.loginUser != null}">[[${session.loginUser.nickname}]]</a>
             </li>
             <li>
                 <a th:if="${session.loginUser == null}" href="http://auth.gulimall.com/reg.html" style="color: red;">免费注册</a>
